enhanced animation illusions and cleaned up code